--- a/.github/workflows/update_temperature.yml
+++ b/.github/workflows/update_temperature.yml
@@ -1,36 +1,41 @@
-name: Fetch Adafruit IO Data
+name: Update Excel Sheet with Adafruit IO Data
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour (modify as needed)
+    - cron: '0 * * * *'  # Runs every hour (or set your preferred frequency)
   workflow_dispatch:
 
 jobs:
-  fetch_data:
+  update_excel:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install jq (for formatting JSON)
-      run: |
-        sudo apt-get install jq
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'  # Uses Python 3.x (adjust as needed)
 
-    - name: Fetch data from Adafruit IO feed
+    - name: Install dependencies
+      run: |
+        pip install openpyxl  # Install openpyxl to work with Excel files
+
+    - name: Fetch data from Adafruit IO
       run: |
         curl -X GET "https://io.adafruit.com/api/v2/${{ secrets.ADAFRUIT_USERNAME }}/feeds/${{ secrets.FEED_KEY }}/data?limit=1" \
         -H "X-AIO-Key: ${{ secrets.ADAFRUIT_IO_KEY }}" \
         -o adafruit_data.json
 
-    - name: Format and append data to repository's .txt file
+    - name: Update Excel sheet with the fetched data
       run: |
-        echo "Latest data fetched from Adafruit IO:" >> data_from_adafruit.txt
-        cat adafruit_data.json | jq '.' >> data_from_adafruit.txt
+        python update_excel.py
 
     - name: Commit and push changes
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add data_from_adafruit.txt
-        git commit -m "Update with formatted data from Adafruit IO"
+        git add data.xlsx
+        git commit -m "Updated Excel with data from Adafruit IO"
         git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
